refactor(Register) : 정렬을 도메인에서 수행하도록 수정